# ChangeLog for x11-libs/qt-webkit
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Oct 2009; Alex Alexander <wired@gentoo.org>
  -qt-webkit-4.6.0_beta1.ebuild:
  moved to the tree

  16 Oct 2009; Alex Alexander <wired@gentoo.org>
  qt-webkit-4.6.0_beta1.ebuild:
  switched to qt4-build.eclass

*qt-webkit-4.6.0_beta1 (14 Oct 2009)

  14 Oct 2009; Dror Levin <spatz@gentoo.org> +qt-webkit-4.6.0_beta1.ebuild,
  -qt-webkit-4.6.0_alpha_pre1.ebuild:
  Version bump.

  14 Oct 2009; Jonathan Callen <abcd@gentoo.org>
  -files/ExecutableAllocator_h.patch:
  Drop old patch

  04 Oct 2009; Alex Alexander <wired@gentoo.org> -qt-webkit-4.5.3.ebuild:
  in tree

  02 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qt-webkit-4.5.3.ebuild:
  Removed patch (applied upstream)

*qt-webkit-4.5.3 (02 Oct 2009)

  02 Oct 2009; Alex Alexander <wired@gentoo.org> +qt-webkit-4.5.3.ebuild:
  version bump

  13 Sep 2009; Dominik Kapusta <d@ayoy.net> metadata.xml:
  Added exceptions flag description.

  23 Jul 2009; Markos Chandras <hwoarang@gentoo.org> files/kde-phonon.patch:
  New kde-phonon.patch thanks to krytzz :)

  16 Jul 2009; <hwoarang@gentoo.org> qt-webkit-4.5.9999.ebuild:
  Dont apply patch on Nokias' live ebuilds. Please test it with qt-webkit[qt-copy]

  06 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-webkit-4.5.9999.ebuild, +files/kde-phonon.patch:
  Apply patch to fix kde-phonon stuff

  27 Jun 2009; Dror Levin <spatz@psybear.com> -qt-webkit-4.5.2.ebuild:
  Moved to tree.

*qt-webkit-4.5.2 (25 Jun 2009)

  25 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  +qt-webkit-4.5.2.ebuild:
  Version bump to 4.5.2

  07 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-webkit-4.5.9999.ebuild, qt-webkit-4.9999.ebuild:
  Backport phonon use flag fixes from portage

  24 May 2009; Markos Chandras <hwoarang@gentoo.org>
  qt-webkit-4.5.9999.ebuild, qt-webkit-4.9999.ebuild,
  +files/sparc-qt-webkit-sigbus.patch: