@@ -1,7 +1,7 @@
 AUX kde-phonon.patch 1077 RMD160 8a6f86faf9af977c1452c0ff0538ae79e962ad98 SHA1 d089a2b0dbad952458d9662c7cecbc159308b3a6 SHA256 b2428cd2b1676e359d7a0bec1473449cffb51292703afe969b8b80aa228dd93a
 AUX sparc-qt-webkit-sigbus.patch 5337 RMD160 8115404ff15afaff75df56d7e769741e066a4fc7 SHA1 5115dccef4ac8214788fcdca8aa8541d4eee2a1f SHA256 46c8fdb2c6c39d69dcc34f22ec887187dfea95a5892d291e9ed5496c307b73cc
-EBUILD qt-webkit-4.5.9999.ebuild 981 RMD160 8210a41bd7fee714dadecf81c0be9afc5ddb720a SHA1 0d6f942c1334e126ef44e96986aa94dc873245d6 SHA256 b8e9eaaeec9b1e24d1e8571476185fb310580254472acf2663460ffad90b095f
-EBUILD qt-webkit-4.6.9999.ebuild 898 RMD160 4737b4fe6882f81c0b18e37601fa34c660ce4b17 SHA1 19630cbd9af7ef7704cb5ebd5b909b2ede0581b6 SHA256 48025de91994bb2423c5f70394ec302ad9412a9724105ecd4f0123bfad6399cf
-EBUILD qt-webkit-4.9999.ebuild 898 RMD160 4737b4fe6882f81c0b18e37601fa34c660ce4b17 SHA1 19630cbd9af7ef7704cb5ebd5b909b2ede0581b6 SHA256 48025de91994bb2423c5f70394ec302ad9412a9724105ecd4f0123bfad6399cf
-MISC ChangeLog 4667 RMD160 cc64233757a2b7f72223bd8bac476e7f547898be SHA1 9f2ad30ab13780d88923ec013ca92ae63cfbe2f2 SHA256 16dcb7c9fa01c08d9118188d1439626e33e1179e4a10558ac1260e97e2c8f330
+EBUILD qt-webkit-4.5.9999.ebuild 1026 RMD160 66d62d45aff3ad7a743fb4e853bf6d1bdb500e32 SHA1 5f1261c8602400b640418129ae1aad6ab429c6d2 SHA256 923f22cf699bbc635de7a1a99791deae6c78995eb79e7786dab6e9400d838c61
+EBUILD qt-webkit-4.6.9999.ebuild 943 RMD160 8e2f6b9146ba92765aeaef0814c463eee08dd41b SHA1 9f2385cf7caaf87eed0aedaaa090cd7a8c955d8d SHA256 29c7b4f4609b8a1331cf3a09e306cd71e646b69404a9357be3ad2215570a16ec
+EBUILD qt-webkit-4.9999.ebuild 943 RMD160 8e2f6b9146ba92765aeaef0814c463eee08dd41b SHA1 9f2385cf7caaf87eed0aedaaa090cd7a8c955d8d SHA256 29c7b4f4609b8a1331cf3a09e306cd71e646b69404a9357be3ad2215570a16ec
+MISC ChangeLog 4843 RMD160 7cdb484b735497db8cace1364e9b5df72e506589 SHA1 c559830da6df40e836644fc53557500e0e5b0b29 SHA256 e2be166366b9b5c2fc2be334b26239f4bc52dc121709c03406237fc1365d83c1
 MISC metadata.xml 369 RMD160 52b34abcd322c2436157d9045cb892cffdbf00e4 SHA1 91a5ea601ffcd5d32626c6cd23767f39ecc743cb SHA256 f92954ba27e6923458310562b1537216409895a1ba484399f49809824a80e980
