@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Nov 2009; Ben de Groot <yngwin@gentoo.org> qt-webkit-4.5.9999.ebuild,
+  qt-webkit-4.6.9999.ebuild, qt-webkit-4.9999.ebuild:
+  Add dbus dependency, as reported by Cardoe.
+
   16 Oct 2009; Alex Alexander <wired@gentoo.org>
   -qt-webkit-4.6.0_beta1.ebuild:
   moved to the tree
